[UPDATE] search and insert algo [FIX] content box